--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nx dev cart",
-    "build": "nx build cart"
+    "build": "nx build cart",
+    "serve": "next start"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +21,7 @@
     "@nx/js": "18.3.4",
     "@nx/next": "18.3.4",
     "@nx/workspace": "18.3.4",
+    "@prisma/client": "^5.13.0",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
@@ -41,8 +43,9 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "18.3.4",
-    "postcss": "8.4.21",
+    "postcss": "^8.4.38",
     "prettier": "^2.6.2",
+    "prisma": "^5.13.0",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
